[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Hiromasa Kato <hka@trackman.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
opencv-python = "^4.8.1.78"
imageio = "^2.33.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
